--- a/cnc/templates/cnc/index.html
+++ b/cnc/templates/cnc/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <h1>CyberNetCall</h1>
-  <div id="connectionStatus" style="display: none; font-weight: bold; margin-bottom: 1rem;"></div>
+  <div id="connectionStatus"></div>
   <p>Scan the QR code or let your friend scan yours to connect.</p>
 
   <canvas id="qrcode"></canvas>
