--- a/cnc/templates/cnc/index.html
+++ b/cnc/templates/cnc/index.html
@@ -17,7 +17,7 @@
 <body>
   <h1>CyberNetCall</h1>
   <div id="connectionStatus"></div>
-  <p>Scan the QR code or let your friend scan yours to connect.</p>
+  <!-- <p>Scan the QR code or let your friend scan yours to connect.</p> -->
 
   <canvas id="qrcode"></canvas>
 
