--- a/cnc/static/cnc/style.css
+++ b/cnc/static/cnc/style.css
@@ -152,7 +152,7 @@ button:disabled {
   max-height: 25px; /* 通常時の最大の高さ */
   overflow-y: scroll;  /* 常に縦スクロールバーを表示 */
   border: 1px solid #ccc;
-  padding: 0.75rem;
+  padding: 0 0.75rem 0.75rem; /* 上部のパディングを0に、左右と下部は0.75remを維持 */
   margin-bottom: 1rem;
   background-color: #f9f9f9;
   border-radius: 4px;
