--- a/cnc/templates/cnc/index.html
+++ b/cnc/templates/cnc/index.html
@@ -85,7 +85,7 @@
       </div>
     </div>
     <div class="call-controls">
-      <button id="callButton" aria-label="Start/End Group Meeting" title="Start/End Group Meeting">📞</button>
+      <button id="callButton" aria-label="Start/End Group Meeting" title="Start/End Group Meeting">📹</button>
       <button id="frontCamButton" aria-label="Toggle Front Camera" title="Toggle Front Camera" style="display: none;">Front Cam</button>
       <button id="backCamButton" aria-label="Toggle Back Camera" title="Toggle Back Camera" style="display: none;">Back Cam</button>
     </div>
