--- a/cnc/templates/cnc/index.html
+++ b/cnc/templates/cnc/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>🔒CyberNetCall</title>
+  <title>CyberNetCall</title>
   <link rel="manifest" href="{% static 'cnc/manifest.json' %}">
   <link rel="icon" href="{% static 'cnc/icons/icon-192x192.png' %}">
   <link rel="apple-touch-icon" href="{% static 'cnc/icons/icon-192x192.png' %}">
@@ -21,7 +21,7 @@
   <script src="{% static 'cnc/app.js' %}" defer></script>
 </head>
 <body>
-  <h1>🔒CyberNetCall</h1>
+  <h1>CyberNetCall</h1>
   <div id="connectionStatus"></div>
   <!-- <p>Scan the QR code or let your friend scan yours to connect.</p> -->
 
